--- a/.github/workflows/cop.yml
+++ b/.github/workflows/cop.yml
@@ -4,7 +4,7 @@ on: [push]
 
 env:
   BASE: https://hugeota.d.miui.com/20.8.7/miui_CRUX_20.8.7_19e7fe6b23_10.0.zip
-  DEVICE: ginkgo
+  DYNAMIC: false
   MODNAME: miui
   MIUIVER: 20.8.7
 
@@ -23,7 +23,7 @@ jobs:
               sudo apt install wget aria2 python brotli 
        
        - name: Download Pre-Ported FW from Phoenix
-         if: env.BASE== "phoenix"
+         if: env.DYNAMIC== "true"
          run:  |
                aria2c http://tdrive.manofuranium.workers.dev/xiaomi.eu_multi_RedmiNote9Pro_RedmiNote9S_20.7.30_v12-10.zip
                unzip *.zip -d work
@@ -32,7 +32,7 @@ jobs:
                rm -rf system.new.dat.br system.patch.dat system.transfer.list product.new.dat.br product.transfer.list product.patch.dat
                
        - name: Download Pre-Ported FW from ginkgo
-         if: env.BASE== "ginkgo"
+         if: env.DYNAMIC== "false"
          run: |
              aria2c http://tdrive.manofuranium.workers.dev/ROS-MIUI_RedmiNote9S_20.7.29_v12-10.zip
              unzip *.zip -d work
@@ -41,7 +41,7 @@ jobs:
              rm -f system.new.dat.br system.patch.dat system.transfer.list
              
        - name: Download port ROM
-         if: env.DEVICE== "phoenix"
+         if: env.DYNAMIC== "true"
          run: |
               aria2c $BASE
               unzip *.zip system.new.dat.br system.transfer.list system.patch.dat product.new.dat.br product.transfer.list product.patch.dat -d work -qq
@@ -50,7 +50,7 @@ jobs:
               zip -r $ZIPNAME_RedmiNote9S_$MIUIVER_henlotools-10.zip
             
        - name: Download port ROM
-         if: env.DEVICE== "ginkgo"
+         if: env.DYMAMIC== "false"
          run: |
               aria2c $BASE
               unzip *.zip system.new.dat.br system.transfer.list system.patch.dat -d work -qq
