--- a/.github/workflows/cop.yml
+++ b/.github/workflows/cop.yml
@@ -21,7 +21,7 @@ jobs:
          run: |
               mkdir work
               cd work
-              sudo apt install wget aria2 python brotli expect spawn
+              sudo apt install wget aria2 python brotli expect 
        
        - name: Dynamic porting
          if: env.DYNAMIC == 'true'
@@ -38,6 +38,7 @@ jobs:
        - name: Upload Port ROM
          run: |
               cd work
+              expect -c "
               spawn sftp jamieho@frs.sourceforge.net
               expect \"yes/no\"
               send \"yes\r\"
@@ -50,6 +51,7 @@ jobs:
               expect \"Uploading\"
               expect \"100%\"
               send \"exit\r\"
+              interact"
               echo "Done!"
               
        - name: Done!
