--- a/.github/workflows/cop.yml
+++ b/.github/workflows/cop.yml
@@ -27,13 +27,15 @@ jobs:
          if: env.DYNAMIC == 'true'
          run:  |
                bash dynamic.sh
-               mv work/*.zip $MODNAME_RedmiNote9S_$MIUIVER_henlotools-10.zip
+               cd work
+               mv *.zip $MODNAME_RedmiNote9S_$MIUIVER_henlotools-10.zip
 
        - name: Non-Dynamic porting
          if: env.DYNAMIC == 'false'
          run: |
              bash common.sh
-             mv work/*.zip $MODNAME_RedmiNote9S_$MIUIVER_henlotools-10.zip
+             cd work
+             mv *.zip $MODNAME_RedmiNote9S_$MIUIVER_henlotools-10.zip
 
        - name: Upload Port ROM
          run: |
