--- a/.github/workflows/cop.yml
+++ b/.github/workflows/cop.yml
@@ -28,14 +28,14 @@ jobs:
          run:  |
                bash dynamic.sh
                cd work
-               mv *.zip $MODNAME_RedmiNote9S_$MIUIVER_henlotools-10.zip
+               mv *.zip $MODNAME_RedmiNote9S_$MIUIVER_henlotools_10.zip
 
        - name: Non-Dynamic porting
          if: env.DYNAMIC == 'false'
          run: |
              bash common.sh
              cd work
-             mv *.zip $MODNAME_RedmiNote9S_$MIUIVER_henlotools-10.zip
+             mv *.zip $MODNAME_RedmiNote9S_$MIUIVER_henlotools_10.zip
 
        - name: Upload Port ROM
          run: |
@@ -49,7 +49,7 @@ jobs:
               expect \"sftp> \"
               send \"cd /home/frs/project/jamie-roms/miuiport\r\"
               set timeout -1
-              send \"put $MODNAME_RedmiNote9S_$MIUIVER_henlotools-10.zip\r\"
+              send \"put $MODNAME_RedmiNote9S_$MIUIVER_henlotools_10.zip\r\"
               expect \"Uploading\"
               expect \"100%\"
               send \"exit\r\"
