--- a/.github/workflows/cop.yml
+++ b/.github/workflows/cop.yml
@@ -1,6 +1,6 @@
 name: CoP
 
-on: [push]
+#on: [push]
 
 env:
   BASE: https://hugeota.d.miui.com/20.8.7/miui_CRUX_20.8.7_19e7fe6b23_10.0.zip
@@ -41,6 +41,7 @@ jobs:
        - name: Upload Port ROM
          run: |
               cd work
+              ls
               expect -c "
               spawn sftp jamieho@frs.sourceforge.net
               expect \"yes/no\"
